--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,11 @@ dependencies:
     sdk: flutter
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  flutter_local_notifications: ^15.1.1
+  flutter_local_notifications: ^19.1.0
+  timezone: ^0.10.1
   share_plus: ^7.0.2
-  intl: ^0.18.1
+  intl: ^0.20.2
+  awesome_notifications: ^0.10.1
 
 dev_dependencies:
   build_runner: ^2.4.0
